@@ -1,7 +1,9 @@
-Changes between 1.4.15 and X
+Changes between 1.4.16 and X
 ==================================================
 
-- introduce exp optional argument to py.path.local
+- make py.io.TerminalWriter() prefer colorama if it is available
+
+- introduce optional "expanduser" argument to py.path.local
   to that local("~", expanduser=True) gives the home
   directory of "user".
 
